fix: v-scroll reveal making nav bar overflow. add overflow-hidden to sections with v-scroll reveal

--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -12,17 +12,22 @@
 
 html {
   /* font-family: 'Kongtext'; */
-
   /* font-family: 'Lunch DS'; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: calc(12px + 6 * ((100vw - 320px) / 680));
   scroll-behavior: smooth;
+  overscroll-behavior: none;
 }
 
 @media screen and (min-width: 1024px) {
   html {
     font-size: 16px
   }
+}
+
+body {
+  width: 100%;
+  height: 100%;
 }
 
 .contents {
